<resources>
    <string name="app_name">UI components</string>
    <string name="value">The value is %d</string>
    <string name="increment">increment</string>
    <string name="root_fragment">root_fragment</string>
    <string name="add_red_fragment">add red fragment</string>
    <string name="add_blue_fragment">add blue fragment</string>
    <string name="replace_with_green_fragment">replace with green fragment</string>
    <string name="remove_last_fragment">remove last fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="increment_value">increment value</string>
    <string name="change_background">change background</string>
    <string name="root_fragment2">root fragment</string>
    <string name="second_fragment">second fragment</string>
    <string name="show_alert_dialog">Show alert dialog</string>
    <string name="show_dialog">Show dialog</string>
    <string name="show_time_picker">Show time picker</string>
    <string name="show_date_picker">Show date picker</string>
    <string name="show_bottom_sheet_dialog">Show bottom sheet dialog</string>
    <string name="dialog_fragmentl">Dialog fragmentl</string>
    <string name="cancel">CANCEL</string>
    <string name="ok">OK</string>
</resources>