<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_container"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".workshop4.Task4Activity"
    android:gravity="center_horizontal|center_vertical"
    android:orientation="vertical">

    <Button
        android:id="@+id/btn_show_alert_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_alert_dialog"/>

    <Button
        android:id="@+id/btn_show_dialog_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_dialog"/>

    <Button
        android:id="@+id/btn_show_time_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_time_picker"/>

    <Button
        android:id="@+id/btn_show_date_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_date_picker"/>

    <Button
        android:id="@+id/btn_show_bottom_sheet_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_bottom_sheet_dialog"/>

</LinearLayout>